--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,43 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+.blue {
+    color: $blue;
+}
+
+.indigo {
+    color: $indigo;
+}
+
+.red {
+    color: $red;
+}
+
+.purple {
+    color: $purple;
+}
+
+.pink {
+    color: $pink;
+}
+
+.yellow {
+    color: $yellow;
+}
+
+.green {
+    color: $green;
+}
+
+.cyan {
+    color: $cyan;
+}
+
+.teal {
+    color: $teal;
+}
+
+.orange {
+    color: $orange;
+}
