--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,9 @@ $fa-font-path: "../webfonts";
 
 // Admin LTE 
 @import '~admin-lte/dist/css/adminlte.css';
+
+
+// .router-link-exact-active {
+//     background-color: rgb(62, 100, 156);
+//     color: white !important;
+// }
